--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/responsiveness.css">
 </head>
-<body>
-    <h1>Hi there</h1>
+
+<!-- Header -->
+<header>
+        <div class="logo">
+            <a href="#"><h1>Wajeeh-ur-<span>Rehman</span></h1></a>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#"></a>project</li>
+                <li><a href="#"></a>about</li>
+                <li><a href="#"></a>contact</li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
